added 3d, billboards, navigation, reports, parking
